--- a/2018-6-12/001.md
+++ b/2018-6-12/001.md
@@ -48,6 +48,8 @@ int main()
 
 ![result](001.png)
 
+這個是先建一個檔案，然後再把檔案的東西讀出來。
+
 ======所以我用了別的方法=======
 
 #include <iostream>
@@ -99,3 +101,5 @@ int main()
 ==========這樣就成功了========
 
 ![result](002.png)
+
+這個是把第一個檔案的東西直接放入第二個檔案。
