--- a/2018-6-12/001.md
+++ b/2018-6-12/001.md
@@ -7,7 +7,7 @@ int main()
 {
     ofstream output;
  
-    output.open("c:///scores33.txt");
+    output.open("c:///scores33.txt");   //開啟或建一個檔案
  
     string firstName;
     char mi;
@@ -22,7 +22,7 @@ int main()
         << " " << 95 << endl;
     
     output.close();
-    ifstream input("c:///scores33.txt");
+    ifstream input("c:///scores33.txt");    //開啟固定的檔案
   
     input >> firstName >> mi >> lastName >> score;
     cout << firstName << " " << mi << " " << lastName << " "
@@ -60,11 +60,11 @@ using namespace std;
 int main()
 {
    
-    ifstream input("c:///scores33.txt");
+    ifstream input("c:///scores33.txt");   //開啟固定的檔案
     
     ofstream output;
  
-    output.open("c:///scores31.txt");
+    output.open("c:///scores31.txt");      //新建一個檔案
     
     string firstName;
     char mi;
