--- a/2018-6-12/001.md
+++ b/2018-6-12/001.md
@@ -103,3 +103,42 @@ int main()
 ![result](002.png)
 
 這個是把第一個檔案的東西直接放入第二個檔案。
+
+==========做下一個題目，這是先偵測有沒有這個檔案，有就把所有的分數印出並加起來========
+
+#include <iostream>
+#include <fstream>
+using namespace std;
+
+int main()
+{
+  ifstream input("c:///scores.txt");
+  
+  if (input.fail())
+  {
+    cout << "File does not exist" << endl;
+    cout << "Exit program" << endl;
+    return 0;
+  }
+
+  double sum = 0;
+  double number;
+  
+  while (input >> number) // Read data to the end of file
+  {
+    cout << number << " "; // Display data
+    sum += number;
+  }
+
+  input.close();
+
+  cout << "\nTotal is " << sum << endl;
+
+  return 0;
+}
+
+==========因為檔案的關西所以我自己手打一份分數========
+
+![result](003.png)
+
+==========下一題，=========
